demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "2048-deployment"
  namespace: "2048-game"
spec:
  selector:
    matchLabels:
      app: "2048"
  replicas: 5
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
      - image: cayo999/node-web-app
        imagePullPolicy: Always
        name: "2048"
        ports:
        - containerPort: 3000
