demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-1010"
  namespace: "1010-demo"
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: "1010"
