front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-1010"
  namespace: "1010-demo"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "2020"
