demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "1010-ingress"
  namespace: "1010-demo"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: 1010-ingress
spec:
  rules:
  - host: app.adminpro.com
    http:
      paths:
      - backend:
          serviceName: service-2020
          servicePort: 80
  - host: app.service.com
    http:
      paths:
      - backend:
          serviceName: service-1010
          servicePort: 3000
